# w3m

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  premake5.lua
.github/: dependabot.yml
.github/workflows/: build.yml
cmake/: compiler-env.cmake  utils.cmake  version.cmake
src/: CMakeLists.txt  a.cpp  main.cpp  resource.hpp  resource.rc  std_include.cpp  std_include.hpp
src/client/: CMakeLists.txt  a.cpp  game_version.hpp  main.cpp  resource.hpp  resource.rc  std_include.hpp
src/client/loader/: component_interface.hpp  component_loader.cpp  component_loader.hpp  loader.cpp  loader.hpp
src/client/module/: console.cpp  filesystem.cpp  game_module.cpp  game_path.cpp  game_path.hpp  icon.cpp  launcher.cpp  network.cpp  network.hpp  patches.cpp  properties.cpp  properties.hpp  renderer.cpp  renderer.hpp  scheduler.cpp  scheduler.hpp  scripting.cpp  scripting.hpp  scripting_experiments.cpp  scripting_filesystem.cpp  splash.cpp  steam_proxy.cpp  steam_proxy.hpp  updater.cpp  updater.hpp  window.cpp  window.hpp
src/client/network/: address.cpp  address.hpp  socket.cpp  socket.hpp
src/client/resources/: main.html
src/client/steam/: interface.cpp  interface.hpp  steam.hpp
src/client/updater/: file_info.hpp  file_updater.cpp  file_updater.hpp  progress_listener.hpp  progress_ui.cpp  progress_ui.hpp  update_cancelled.hpp  updater.cpp  updater.hpp  updater_ui.cpp  updater_ui.hpp
src/client/utils/: compression.cpp  cryptography.cpp  http.cpp  http.hpp  identity.cpp  identity.hpp  smbios.cpp  smbios.hpp
src/common/: CMakeLists.txt
src/common/game/: structs.hpp
src/common/network/: address.cpp  address.hpp  manager.cpp  manager.hpp  socket.cpp  socket.hpp
src/common/utils/: byte_buffer.cpp  byte_buffer.hpp  com.cpp  com.hpp  compression.cpp  compression.hpp  concurrency.hpp  concurrent_list.hpp  cryptography.cpp  cryptography.hpp  finally.hpp  flags.cpp  flags.hpp  hook.cpp  hook.hpp  io.cpp  io.hpp  memory.cpp  memory.hpp  nt.cpp  nt.hpp  properties.cpp  properties.hpp  signature.cpp  signature.hpp  string.cpp  string.hpp  thread.cpp  thread.hpp  timer.hpp
src/loader/: component_interface.hpp  component_loader.cpp  component_loader.hpp  loader.cpp  loader.hpp  module.hpp  module_loader.cpp  module_loader.hpp
src/module/: camera.cpp  console.cpp  experiments.cpp  filesystem.cpp  game_module.cpp  game_path.cpp  (+19 more)
(+38 files in other folders)
